--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,49 @@
-header{
-       background: pink;
+/*reglas
+declaraciones
+selectores
+propiedades
+declaraciones
+valore*/
+
+body {
+     font-family:'Source Sans Pro',sans-serif;
+} 
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+       font-family: 'Fjalla One', sans-serif;
+}
+h1{
+       font-size: 40px;
+       line-height: 1.5;
+       letter-spacing: -.2px;
+       color: white;
+      /* text-transform: uppercase
+      text-decoration: dashed;;*/
+}
+h1 strong{
+color: #026fff;
+}
+.project-details{
+       width: 500px;
+}
+.hero{
+       height: 300px;
+       background-image: url('../imgs/hero.jpg');
+       background-color: #1b2127; 
+       background-size: 500px 300px;
+       background-repeat: no-repeat;
+       background-position-x: right; 
+}
+.header{
+       background-color: #1b2127;
+       color: white;
+}
+.header a{
+       color:white;
+       text-decoration: none;
 }
