--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,6 +26,7 @@ h1{
        letter-spacing: -.2px;
        color: white;
       margin-top: 0px;
+      margin: 0;
       /* text-transform: uppercase
       text-decoration: dashed;;*/
 }
@@ -65,14 +66,17 @@ color: #026fff;
        background-size: 500px 300px;
        background-repeat: no-repeat;
        background-position-x: right; 
+       display: flex;
+       align-items: center;
 }
 .header{
        background-color: #1b2127;
        color: white;
        display: flex;
-        /*align-items: center;*/
+        align-items: center;
        justify-content: space-between;
-       height: 90px;
+       height: 70px;
+       
       
        
 }
@@ -80,30 +84,45 @@ color: #026fff;
        height: inherit;
 }
 
-ol,ul{
-       margin: 0px;
-       padding: 0px;
-       list-style: none;
-}
+
 figure{
-       margin: 0;
+       margin: 0px;
 }
 .header a{
        color:white;
        text-decoration: none;
-       display: flex;
-       align-items: center;
        height: inherit;
        padding: 0 10px;
+        display: flex;
+        align-items: center; 
+      
+       
 }
 .header ol{
-       display: flex;
+      display: flex; 
        height: inherit;
+       
 }
-.header ol li{
-height: inherit;
 
+.header ol,li{
+height: inherit;
+list-style: none;
+margin: 0px;
+padding: 0px;
 }
+
+.footer{
+       color: white;
+       background-color: #1b2127;
+       display: flex;
+       align-items: center;
+       justify-content: space-between;
+}
+.footer img{
+       vertical-align: middle;
+       padding: 0 20px;
+}
+
 
 /*.flexBox{
 display: flex;
