--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,110 +18,265 @@ h3,
 h4,
 h5,
 h6{
-       font-family: 'Fjalla One', sans-serif;
+    font-family: 'Fjalla One', sans-serif;
 }
 h1{
-       font-size: 40px;
-       line-height: 1.5;
-       letter-spacing: -.2px;
-       color: white;
-      margin-top: 0px;
-      margin: 0;
-      /* text-transform: uppercase
-      text-decoration: dashed;;*/
+    font-size: 40px;
+    line-height: 1.5;
+    letter-spacing: -.2px;
+    color: white;
+    margin-top: 0px;
+    margin: 0;
+    /* text-transform: uppercase
+    text-decoration: dashed;;*/
 }
 h1 strong{
-color: #026fff;
+  color: #026fff;
+}
+h2{
+    color: #026fff;
+    text-transform: uppercase;
+    font-family:'Source Sans Pro',sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
 .portfolio{
-       background:#fafafa;
+  background:#fafafa;
 }
 .project{
-      /* border-top:  10px solid red;
-       border-right: 10px solid green;
-       border-left: 10px solid orange;
-       border-right: 10px solid blue;
-       border-top-color: red;
-       border-top-width: 15px;
-       border-bottom: 10px solid pink;
-       border-top-style: solid;*/
-       border: 1px solid gray;
-       border-radius: 10px;
-       margin-bottom: 15px;
-       margin:10px;
-       padding:20px;
-       background: white;
+  /* border-top:  10px solid red;
+    border-right: 10px solid green;
+    border-left: 10px solid orange;
+    border-right: 10px solid blue;
+    border-top-color: red;
+    border-top-width: 15px;
+    border-bottom: 10px solid pink;
+    border-top-style: solid;*/
+    border: 1px solid gray;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    /*margin:10px;*/
+    padding:20px;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-      /* margin-right:0px;
-       margin-left:0px;
-       margin-top:0px;*/
+    /* margin-right:0px;
+    margin-left:0px;
+    margin-top:0px;*/
 }
 .project-details{
        width: 500px;
 }
+.project-title{
+    font-size: 30px;
+    margin:0;
+}
+.project-course,.project-date,.project-ur{
+    margin:10px 0; 
+}
+.project-description{
+    font-size: 20px;
+}
+.project strong{
+    font-family: 'Fjalla One', sans-serif;
+}
 .hero{
-       height: 300px;
-       background-image: url('../imgs/hero.jpg');
-       background-color: #1b2127; 
-       background-size: 500px 300px;
-       background-repeat: no-repeat;
-       background-position-x: right; 
-       display: flex;
-       align-items: center;
+    height: 300px;
+    /* background-image: url('../imgs/hero.jpg'); */
+    background-color: #1b2127; 
+     /* background-size: 500px 300px;  */
+    /* background-repeat: no-repeat; */
+    /* background-position-x: right;  */
+    display: flex; 
+    align-items: center;
+    justify-content: space-between;
+  
 }
 .header{
-       background-color: #1b2127;
-       color: white;
-       display: flex;
-        align-items: center;
-       justify-content: space-between;
-       height: 70px;
+    background-color: #1b2127;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 70px;
        
       
        
 }
 .menu{
-       height: inherit;
+    height: inherit;
 }
 
 
 figure{
-       margin: 0px;
+    margin: 0px;
 }
 .header a{
-       color:white;
-       text-decoration: none;
-       height: inherit;
-       padding: 0 10px;
-        display: flex;
-        align-items: center; 
+    color:white;
+    text-decoration: none;
+    height: inherit;
+    padding: 0 10px;
+    display: flex;
+    align-items: center; 
       
        
 }
 .header ol{
-      display: flex; 
-       height: inherit;
-       
+    display: flex; 
+    height: inherit;
+      
 }
 
 .header ol,li{
-height: inherit;
-list-style: none;
-margin: 0px;
-padding: 0px;
+    height: inherit;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
 }
 
 .footer{
-       color: white;
-       background-color: #1b2127;
-       display: flex;
-       align-items: center;
-       justify-content: space-between;
+    color: white;
+    background-color: #1b2127;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .footer img{
-       vertical-align: middle;
-       padding: 0 20px;
+    vertical-align: middle;
+    padding: 0 20px;
 }
+.portfolio{
+    padding:0  20px;
+}
+
+.event-list{
+    display: flex;
+    flex-wrap: wrap;
+}
+.event{
+margin: 10px;
+width: 480px;
+flex-shrink: 0;
+border-radius: 10px;
+overflow: hidden;
+background-color: #f4fbff;
+
+}
+.event img{
+  width: 480px;
+  height: 200px;
+  object-fit: cover;
+
+}
+.event-details{
+  margin: 20px 40px ;
+  padding: 20px;
+  background-color: white;
+  margin-top: -40px;
+  position: relative;
+  text-align: center;
+}
+.event-description{
+  text-align: left;
+}
+
+.event-url{
+  border: 1px solid;
+  padding: 5px 50px;
+  text-decoration: none;
+  color: #056fff;
+  border-radius: 5px;
+  }
+
+  .event-list-title{
+    margin: 20px;
+  }
+
+  .contact{
+    padding: 10px  10px;
+    background-color: #056fff;
+    color: white;
+    height: 130px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
+
+  .social{
+   
+   height: 50px;;
+  }
+  .social-link{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background-size: 50px 50px;
+    margin: 0px 10px;
+    
+  } 
+
+  .social-link.twitter{
+    background-image:url('../imgs/twitter.svg');
+  }
+  .social-link.facebook{
+    background-image:url('../imgs/facebook.svg');
+    
+  }
+  .social-link.github{
+    background-image:url('../imgs/github.svg');
+  }
+  .social-link.instagram{
+    background-image:url('../imgs/instagram.svg');
+  }
+  .form-email input{
+    border-color: gray;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px 30px 10px 35px;
+    background-image: url('../imgs/envelope.svg');
+    background-size: 15px 15px;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: 10px;
+    height: 10px;
+    }
+
+  .form-email button{
+    display: block;
+    border: 1px solid;
+    border-color: white;
+    background-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    color: white;
+    border-radius: 5px;
+    padding: 10px 30px;
+    width: 100px;
+  }
+  .form-email h3{
+    font-family: 'Source Sans Pro',sans-serif;
+  }
+.container{
+  /* border: 1px solid red; */
+  width: 1000px;
+  margin: 0 auto;
+  display: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  height: inherit;
+  flex-wrap: inherit;
+
+}
+.hero-images{
+  height: inherit;
+  width:  500px;
+  object-fit: cover;
+}
+
 
 
 /*.flexBox{
